--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shirakami",
+  "name": "shirakami-ui",
   "version": "0.0.0",
   "description": "React UI Kit by DevHaus",
   "main": "index.js",
@@ -14,7 +14,6 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@storybook/react": "^5.3.19",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "parcel-bundler": "^1.12.4",
