--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shirakami-ui",
   "version": "0.0.1",
   "description": "React UI Kit by DevHaus",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
