--- a/package.json
+++ b/package.json
@@ -2,27 +2,22 @@
   "name": "shirakami-ui",
   "version": "0.0.2",
   "description": "React UI Kit by DevHaus",
-  "main": "src/index.js",
-  "dependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "typeface-oxygen": "0.0.72"
-  },
+  "main": "dist/shirakami.js",
+  "module": "dist/uwu.esm.js",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
-    "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^9.8.0",
-    "babel-loader": "^8.1.0",
-    "parcel-bundler": "^1.12.4",
+    "microbundle": "^0.12.2",
     "rimraf": "^3.0.2",
     "tailwindcss": "^1.4.6"
   },
+  "peerDependencies": {
+    "prop-types": "15.*",
+    "react": "16.*",
+    "typeface-oxygen": "0.0.*"
+  },
   "scripts": {
-    "start": "parcel src/index.html --port 3000",
-    "clean": "rimraf .cache dist"
+    "build": "microbundle --jsx=React.createElement --css-modules=false",
+    "clean": "rimraf dist"
   },
   "keywords": [
     "react",
