--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "typeface-oxygen": "0.0.72"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-viewport": "^5.3.19",
+    "@storybook/react": "^5.3.19",
+    "babel-loader": "^8.1.0",
     "microbundle": "^0.12.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "rimraf": "^3.0.2"
   },
   "peerDependencies": {
@@ -18,6 +28,7 @@
   },
   "scripts": {
     "build": "microbundle --jsx=React.createElement --css-modules=false",
+    "storybook": "start-storybook --port 3000 --quiet",
     "clean": "rimraf dist"
   },
   "keywords": [
