--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shirakami-ui",
   "version": "0.0.13",
   "description": "React UI Kit by DevHaus",
+  "source": "src/index.js",
   "main": "dist/shirakami.js",
   "module": "dist/shirakami.esm.js",
   "dependencies": {
@@ -36,5 +37,6 @@
     "devhaus"
   ],
   "author": "devhaus-ph",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "devhaus-ph/shirakami"
 }
